crates/ridge-parser/tests/fixtures/errors/p018_bare_record_pattern.ridge
-- expect: P018
-- Trigger: record-body pattern `{ ... }` without a constructor name prefix.
fn f x =
    match x
        { name } -> 1
